# glucolog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg
.github/workflows/: functions.sh  workflow.yml
docs/source/: conf.py  index.rst
src/glucolog/: __init__.py  glucolog.py  lang_en.yml  lang_it.yml
tests/: conftest.py  mock_database.py  test_columns.py  test_dump.py  test_export.py  test_language_files.py  test_logging.py  test_parse_args.py  test_tables.py
