[metadata]
name = glucolog
version = 0.0.1
author = Paul D.Smith
author_email = paul@pauldsmith.org.uk
description = Glucolog Glucose Monitor DB program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/papadeltasierra/glucolog
project_urls =
    Bug Tracker = https://github.com/papadeltasierra/glucolog
classifiers =
    Programming Language :: Python :: 3,
    Development Status :: 1 - Development
    Intended Audience :: Medical
    Operating System :: OS Independent
    Topic :: Medical :: Diabetes

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    openpyxl >= 3.0.7
    PyYAML >= 5.4.1

[options.packages.find]
where = src

